# OpenCVClassifiersQtExample

./: CMakeLists.txt  CMakeLists_Qt4.txt  OpenCVClassifiersQtExample.pro  README.md  classifier_ann.cpp  classifier_ann.h  classifier_bt.cpp  classifier_bt.h  classifier_dt.cpp  classifier_dt.h  classifier_em.cpp  classifier_em.h  classifier_emc.cpp  classifier_emc.h  classifier_ert.cpp  classifier_ert.h  classifier_gbt.cpp  classifier_gbt.h  classifier_knn.cpp  classifier_knn.h  classifier_nbc.cpp  classifier_nbc.h  classifier_rf.cpp  classifier_rf.h  classifier_svm.cpp  classifier_svm.h  classifierinterface.cpp  classifierinterface.h  drawlabel.cpp  drawlabel.h  imgres.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
